--- a/crm/webapp/templates/webapp/register.html
+++ b/crm/webapp/templates/webapp/register.html
@@ -1,7 +1,8 @@
 {% extends 'webapp/base.html' %}
 
 {% block content %}
-    <div class='container bg-light shadow-md p-5'>
+<body>
+    <div class='container bg-light shadow-md p-5 form-layout'>
         <h3>Create your account</h3>
         <h5>Start managing your clients today </h5>    
         <hr>
@@ -11,6 +12,14 @@
         <form method="POST" autocomplete="off">
             {% csrf_token %}
             {{form.as_p}}
+            <br>
+            <button type="submit" class="btn btn-primar w-100 btn-block p-2y">Create account</button>
         </form>
+        <br>
+        <div class="text-center">
+            <p>Already have an account? </p> <a href="{% url '' %}" >Login</a>
+        </div>
     </div>
+    <br>
+</body>
 {% endblock %}
