--- a/crm/webapp/templates/webapp/register.html
+++ b/crm/webapp/templates/webapp/register.html
@@ -1,5 +1,7 @@
 {% extends 'webapp/base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 <body>
     <div class='container bg-light shadow-md p-5 form-layout'>
@@ -11,7 +13,7 @@
         {% comment %} the autocomplete is to avoid getting data from past forms {% endcomment %}
         <form method="POST" autocomplete="off">
             {% csrf_token %}
-            {{form.as_p}}
+            {{form|crispy}}
             <br>
             <button type="submit" class="btn btn-primar w-100 btn-block p-2y">Create account</button>
         </form>
