--- a/crm/webapp/templates/webapp/my-login.html
+++ b/crm/webapp/templates/webapp/my-login.html
@@ -14,7 +14,7 @@
             {% csrf_token %}
             {{form2|crispy}}
             <br>
-            <button type="submit" class="btn btn-primar w-100 btn-block p-2y">Create account</button>
+            <button type="submit" class="btn btn-primar w-100 btn-block p-2y">Login</button>
         </form>
         <br>
         <div class="text-center">
