--- a/crm/webapp/templates/webapp/dashboard.html
+++ b/crm/webapp/templates/webapp/dashboard.html
@@ -2,6 +2,52 @@
 
 {% block content %}
 
-<h1>Welcome to the dashboard page! {{user}}</h1>
+</h5>Welcome to the dashboard page! {{user}}</>
+
+<hr>
+
+<a class='btn btn-outline-primary btn-sm' href="{%url 'dashboard' %}" >Create a new record</a>
+
+<hr>
+
+<table class='table table-hover table-bordered'> 
+    <thead class="table-dark">
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Full Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Phone</th>
+            <th scope="col">Address</th>
+            <th scope="col">City</th>
+            <th scope="col">Province</th>
+            <th scope="col">Country</th>
+            <th scope="col">Date Joined</th>
+
+            <th scope="col">View</th>
+        </tr>    
+    </thead>
+    <!---->
+    {% comment %} Check if we have records {% endcomment %}
+    <tbody>
+        <!--We use the value in views the context records to check if there are any records-->
+        {% if records %}
+        {%for record in records %}
+        <tr>
+            <td>{{record.id}}</td>
+            <td>{{record.first_name}} {{record.last_name}}</td>
+            <td>{{record.email}}</td>
+            <td>{{record.phone}}</td>
+            <td>{{record.address}}</td>
+            <td>{{record.city}}</td>
+            <td>{{record.province}}</td>
+            <td>{{record.country}}</td>
+            <td>{{record.creation_date}}</td>
+        </tr>
+        {%endfor%}
+        {% endif %}
+    </tbody>
+</table>
+{{record.first_name}}
+{{record.last_name}}
 
 {% endblock %}
