--- a/crm/webapp/templates/webapp/dashboard.html
+++ b/crm/webapp/templates/webapp/dashboard.html
@@ -6,7 +6,7 @@
 
 <hr>
 
-<a class='btn btn-outline-primary btn-sm' href="{%url 'dashboard' %}" >Create a new record</a>
+<a class='btn btn-outline-primary btn-sm' href="{%url 'create-record' %}" >Create a new record</a>
 
 <hr>
 
