--- a/crm/webapp/templates/webapp/create-record.html
+++ b/crm/webapp/templates/webapp/create-record.html
@@ -15,7 +15,7 @@
             {% csrf_token %}
             {{form3|crispy}}
             <br>
-            <button type="submit" class="btn btn-primary w-100 btn-block p-2y">Create account</button>
+            <button type="submit" class="btn btn-primary w-100 btn-block p-2y">Create Record</button>
         </form>
     </div>
 </body>
