--- a/crm/webapp/templates/webapp/view-record.html
+++ b/crm/webapp/templates/webapp/view-record.html
@@ -29,6 +29,6 @@
  &nbsp;
  <a href="{% url 'update-record' record.id %}" class="btn btn-info">Update Record</a>
  &nbsp;
- <a href="{% url '' %}" class="btn btn-danger">Delete</a>
+ <a href="{% url 'delete-record' record.id %}" class="btn btn-danger">Delete</a>
  &nbsp;
 {% endblock %}
