--- a/crm/webapp/templates/webapp/create-record.html
+++ b/crm/webapp/templates/webapp/create-record.html
@@ -15,8 +15,13 @@
             {% csrf_token %}
             {{form3|crispy}}
             <br>
-            <button type="submit" class="btn btn-primary w-100 btn-block p-2y">Create Record</button>
+            <button type="submit" class="btn btn-primary w-100 btn-block p-2y">Create Record &nbsp; <i class="fa fa-check" aria-hidden="true"></i>
+            </button>
+            &nbsp;
+            <a href="{% url 'dashboard' %}" class="btn btn-secondary">Return &nbsp; <i class="fa fa-arrow-left" aria-hidden="true"></i>
+            </a>
         </form>
+        <br>
     </div>
 </body>
 
