--- a/crm/webapp/templates/webapp/base.html
+++ b/crm/webapp/templates/webapp/base.html
@@ -7,6 +7,7 @@
         <title> ProjectX </title>
         <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         {% comment %} the order above is important {% endcomment %}
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
