--- a/crm/webapp/templates/webapp/index.html
+++ b/crm/webapp/templates/webapp/index.html
@@ -7,7 +7,8 @@
             <h5>Keep track of your records effectively</h5>
             <br>
             <hr>
-            <a class="btn btn-primary" type="button" href="{% url 'register' %}">Create your account</a>
+            <a class="btn btn-primary" type="button" href="{% url 'register' %}">Create your account &nbsp; <i class="fa fa-user-plus" aria-hidden="true"></i>
+            </a>
         </div>
     </body>
 {% endblock %}
