--- a/crm/webapp/templates/webapp/view-record.html
+++ b/crm/webapp/templates/webapp/view-record.html
@@ -3,12 +3,15 @@
 {% block content %}
 <!-- We want to add in a card -->
  <div class='card'>
+    
+    <div class='card-body'>
+        <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+    &nbsp;
     <strong> Mr. 
         {{record.last_name|upper}}
         {{record.first_name}}
     </strong>
     <hr>
-    <div class='card-body'>
         <p><strong>ID: </strong> {{record.id}} </p>
         <p><strong>Email: </strong> {{record.email}} </p>
         <p><strong>Phone: </strong> {{record.phone}} </p>
@@ -25,10 +28,13 @@
  
  <br>
 
- <a href="{% url 'dashboard' %}" class="btn btn-secondary">Return</a>
+ <a href="{% url 'dashboard' %}" class="btn btn-secondary">Return &nbsp; <i class="fa fa-arrow-left" aria-hidden="true"></i>
+ </a>
  &nbsp;
- <a href="{% url 'update-record' record.id %}" class="btn btn-info">Update Record</a>
+ <a href="{% url 'update-record' record.id %}" class="btn btn-info">Update Record &nbsp; <i class="fa fa-plus" aria-hidden="true"></i>
+ </a>
  &nbsp;
- <a href="{% url 'delete-record' record.id %}" class="btn btn-danger">Delete</a>
+ <a href="{% url 'delete-record' record.id %}" class="btn btn-danger">Delete &nbsp; <i class="fa fa-minus-square" aria-hidden="true"></i>
+ </a>
  &nbsp;
 {% endblock %}
