--- a/crm/webapp/templates/webapp/dashboard.html
+++ b/crm/webapp/templates/webapp/dashboard.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-</h5>Welcome to the dashboard page! {{user}}</>
+</h5>Welcome to the dashboard page! {{user}} 🤠</>
 
 <hr>
 
