--- a/crm/webapp/templates/webapp/register.html
+++ b/crm/webapp/templates/webapp/register.html
@@ -14,6 +14,7 @@
         <form method="POST" autocomplete="off">
             {% csrf_token %}
             <!--The problem about this is that there is no spaces between the inputs-->
+            {% comment %} {{form.as_p}} # initial {% endcomment %} 
             {% comment %} {{form|crispy}}  {% endcomment %}
             {{form.username|as_crispy_field}}
             <br>
