--- a/crm/webapp/templates/webapp/register.html
+++ b/crm/webapp/templates/webapp/register.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <body>
-    <div class='container bg-light shadow-md p-5 form-layout'>
+    <div class='container bg-light shadow-md p-5 form-layout'> 
+        {% comment %} form layout comes from the styles {% endcomment %}
         <h3>Create your account</h3>
         <h5>Start managing your clients today </h5>    
         <hr>
@@ -15,6 +16,7 @@
             {% csrf_token %}
             <!--The problem about this is that there is no spaces between the inputs-->
             {% comment %} {{form.as_p}} # initial {% endcomment %} 
+            {% comment %} below is how to use crispy in the first way {% endcomment %}
             {% comment %} {{form|crispy}}  {% endcomment %}
             {{form.username|as_crispy_field}}
             <br>
